Fix the background color of the loading screen and missing margins due to Bootstrap upgrade

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,7 @@ $badge-font-size: 12px;
 	--hover-background-color: var(--light-theme-hover-background-color);
 	--scrollbar-color: var(--light-theme-scrollbar-color);
 	--text-color: black;
+	--primary: #0d47a1;
 }
 
 [theme="dark"] {
